--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.detectIndentation": false,
 	"editor.tabSize": 4,
-    "editor.insertSpaces": false,
+    "editor.insertSpaces": true,
 	"editor.renderWhitespace": "boundary",
 	"editor.formatOnPaste": false,
 	"editor.formatOnSave": false,
